various avails cleanup fixes

--- a/avails/availsCleanup.ipynb
+++ b/avails/availsCleanup.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 185,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T16:54:54.205740Z",
-     "start_time": "2021-01-09T16:54:50.292687Z"
+     "end_time": "2021-01-09T18:45:48.867293Z",
+     "start_time": "2021-01-09T18:45:48.846383Z"
     }
    },
    "outputs": [],
@@ -65,6 +65,8 @@
     "    df['Holdback'].loc[mask] = pd.NaT\n",
     "    mask = (df['Non-Exclusive Date'] < df['Exclusive Date']) & (df['Non-Exclusive Date'] > dt.datetime.today())\n",
     "    df['Available?'].loc[mask] = df['Non-Exclusive Date'].loc[mask]\n",
+    "    df['First Run or Library'] = df['Is Reissue?'].fillna('First Run')\n",
+    "    df['First Run or Library'] = df['First Run or Library'].map({'Yes': 'Library', 'First Run': 'First Run'})\n",
     "    \n",
     "    sale_activity = tidy_split(df, 'Previous Sale Activity', sep='\\n', keep=False)\n",
     "    sale_activity['Previous Sale Activity'] = sale_activity['Previous Sale Activity'].str.replace('.', '')\n",
@@ -90,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 186,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-08T17:57:35.808082Z",
-     "start_time": "2021-01-08T17:57:33.940118Z"
+     "end_time": "2021-01-09T18:45:54.129813Z",
+     "start_time": "2021-01-09T18:45:49.574992Z"
     }
    },
    "outputs": [
@@ -137,29 +139,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 187,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:05:57.972363Z",
-     "start_time": "2021-01-07T23:05:57.949423Z"
+     "end_time": "2021-01-09T18:45:54.285639Z",
+     "start_time": "2021-01-09T18:45:54.271975Z"
     }
    },
    "outputs": [],
    "source": [
     "agg_dict = {'Region': lambda x: ' & '.join(x),\n",
-    "            'Is Reissue?_PanRegionalPayTV':'first', \n",
+    "            'First Run or Library_PanRegionalPayTV':'first', \n",
     " 'Available?_PanRegionalPayTV': 'first',\n",
     " 'Holdback_PanRegionalPayTV': 'first', \n",
     " 'Note_PanRegionalPayTV': 'first', \n",
     " 'Acq. Expires_PanRegionalPayTV': 'first',\n",
     " 'Previous Sale Activity_PanRegionalPayTV': 'first',\n",
-    "'Is Reissue?_LocalPayTV':'first', \n",
+    "'First Run or Library_LocalPayTV':'first', \n",
     " 'Available?_LocalPayTV': 'first',\n",
     " 'Holdback_LocalPayTV': 'first', \n",
     " 'Note_LocalPayTV': 'first', \n",
     " 'Acq. Expires_LocalPayTV': 'first',\n",
     " 'Previous Sale Activity_LocalPayTV': 'first',\n",
-    "'Is Reissue?_SVOD':'first', \n",
+    "'First Run or Library_SVOD':'first', \n",
     " 'Available?_SVOD': 'first',\n",
     " 'Holdback_SVOD': 'first', \n",
     " 'Note_SVOD': 'first', \n",
@@ -174,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 188,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:05:59.050621Z",
-     "start_time": "2021-01-07T23:05:59.042667Z"
+     "end_time": "2021-01-09T18:45:54.425078Z",
+     "start_time": "2021-01-09T18:45:54.411305Z"
     }
    },
    "outputs": [],
@@ -193,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 189,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:00.609209Z",
-     "start_time": "2021-01-07T23:06:00.525133Z"
+     "end_time": "2021-01-09T18:45:54.613609Z",
+     "start_time": "2021-01-09T18:45:54.551628Z"
     }
    },
    "outputs": [],
@@ -207,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 190,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:01.169123Z",
-     "start_time": "2021-01-07T23:06:01.161115Z"
+     "end_time": "2021-01-09T18:45:54.754686Z",
+     "start_time": "2021-01-09T18:45:54.740274Z"
     }
    },
    "outputs": [],
@@ -230,30 +232,18 @@
     " 'Mexico': 'Mexico',\n",
     " 'Mexico & Brazil': 'Mexico & Brazil',\n",
     " 'Brazil & Mexico': 'Mexico & Brazil',                 \n",
-    " 'Latin America excluding Brazil & Mexico': 'Latin America excluding Brazil & Mexico',}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:02.230902Z",
-     "start_time": "2021-01-07T23:06:02.214946Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    " 'Latin America excluding Brazil & Mexico': 'Latin America excluding Brazil & Mexico',}\n",
+    "\n",
     "merged_df['Region'] = merged_df['Region'].map(region_mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 191,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:02.885634Z",
-     "start_time": "2021-01-07T23:06:02.842762Z"
+     "end_time": "2021-01-09T18:45:54.911044Z",
+     "start_time": "2021-01-09T18:45:54.881156Z"
     }
    },
    "outputs": [],
@@ -263,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 192,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:04.527599Z",
-     "start_time": "2021-01-07T23:06:04.037377Z"
+     "end_time": "2021-01-09T18:45:55.537253Z",
+     "start_time": "2021-01-09T18:45:55.038704Z"
     }
    },
    "outputs": [],
@@ -280,11 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 193,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:05.298774Z",
-     "start_time": "2021-01-07T23:06:05.265830Z"
+     "end_time": "2021-01-09T18:45:55.679323Z",
+     "start_time": "2021-01-09T18:45:55.664789Z"
     }
    },
    "outputs": [],
@@ -294,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 194,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:06.614049Z",
-     "start_time": "2021-01-07T23:06:05.898365Z"
+     "end_time": "2021-01-09T18:45:56.536367Z",
+     "start_time": "2021-01-09T18:45:55.805020Z"
     }
    },
    "outputs": [],
@@ -311,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 195,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:06.754796Z",
-     "start_time": "2021-01-07T23:06:06.740720Z"
+     "end_time": "2021-01-09T18:45:56.677197Z",
+     "start_time": "2021-01-09T18:45:56.664198Z"
     }
    },
    "outputs": [],
@@ -325,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 196,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:07.444257Z",
-     "start_time": "2021-01-07T23:06:07.429330Z"
+     "end_time": "2021-01-09T18:45:56.818354Z",
+     "start_time": "2021-01-09T18:45:56.806816Z"
     }
    },
    "outputs": [],
@@ -340,11 +330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 197,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:08.322520Z",
-     "start_time": "2021-01-07T23:06:08.308517Z"
+     "end_time": "2021-01-09T18:45:56.959366Z",
+     "start_time": "2021-01-09T18:45:56.944908Z"
     }
    },
    "outputs": [],
@@ -354,11 +344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 198,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:09.023602Z",
-     "start_time": "2021-01-07T23:06:09.009676Z"
+     "end_time": "2021-01-09T18:45:57.101878Z",
+     "start_time": "2021-01-09T18:45:57.089023Z"
     }
    },
    "outputs": [],
@@ -368,57 +358,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:09.995535Z",
-     "start_time": "2021-01-07T23:06:09.955614Z"
+     "end_time": "2021-01-09T18:45:57.259240Z",
+     "start_time": "2021-01-09T18:45:57.230504Z"
     }
    },
    "outputs": [],
    "source": [
     "for col in date_cols:\n",
-    "    merged_df[col] = merged_df[col].apply(lambda x: x.date())"
+    "    merged_df[col] = merged_df[col].apply(lambda x: x.date())\n",
+    "    merged_df[col] = merged_df[col].apply(lambda x: 'Now' if x == dt.date.today() else x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 200,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:10.623640Z",
-     "start_time": "2021-01-07T23:06:10.600702Z"
+     "end_time": "2021-01-09T18:45:57.775558Z",
+     "start_time": "2021-01-09T18:45:57.761596Z"
     }
    },
    "outputs": [],
    "source": [
-    "cols_ordered = ['Unique Id', 'Title', 'Region', 'Genre', 'Cast Member',\n",
-    "       'Year Completed', 'Director', 'Project Type', 'Synopsis', 'Website',\n",
-    "       'Original Format', 'Dialogue Language', 'Subtitle Language', 'Non-Exclusive Date_PanRegionalPayTV',\n",
-    "       'Exclusive Date_PanRegionalPayTV', 'Non-Exclusive Date_LocalPayTV',\n",
-    "       'Exclusive Date_LocalPayTV', 'Non-Exclusive Date_SVOD',\n",
-    "       'Exclusive Date_SVOD', 'Is Reissue?_PanRegionalPayTV',\n",
-    "       'Available?_PanRegionalPayTV', 'Holdback_PanRegionalPayTV',\n",
-    "       'Note_PanRegionalPayTV', 'Previous Sale Activity_PanRegionalPayTV',\n",
-    "       'Is Reissue?_LocalPayTV', 'Available?_LocalPayTV',\n",
-    "       'Holdback_LocalPayTV', 'Note_LocalPayTV',\n",
-    "       'Previous Sale Activity_LocalPayTV', 'Is Reissue?_SVOD',\n",
-    "       'Available?_SVOD', 'Holdback_SVOD', 'Note_SVOD', 'Acq. Expires_SVOD',\n",
-    "       'Previous Sale Activity_SVOD', 'Link',\n",
-    "       'Password', 'US Box Office', 'LATAM Box Office', 'IMDB Link', 'USA ',\n",
+    "cols_ordered = ['Project Type', 'Unique Id', 'Title', 'Region', 'Year', 'Genre', 'Cast Member',\n",
+    "       'Director',  'Synopsis', 'Website',\n",
+    "       'Original Format', 'Dialogue Language', 'Subtitle Language',\n",
+    "                \n",
+    "                'First Run or Library_PanRegionalPayTV', \n",
+    "                'Available?_PanRegionalPayTV', 'Non-Exclusive Date_PanRegionalPayTV',\n",
+    "                'Exclusive Date_PanRegionalPayTV', 'Note_PanRegionalPayTV',\n",
+    "                'Holdback_PanRegionalPayTV',\n",
+    "        \n",
+    "                'First Run or Library_LocalPayTV',\n",
+    "                'Available?_LocalPayTV', 'Non-Exclusive Date_LocalPayTV',\n",
+    "                'Exclusive Date_LocalPayTV', 'Note_LocalPayTV',\n",
+    "                'Holdback_LocalPayTV',\n",
+    "                \n",
+    "                'First Run or Library_SVOD', \n",
+    "                'Available?_SVOD', 'Non-Exclusive Date_SVOD', \n",
+    "                'Exclusive Date_SVOD', 'Note_SVOD',\n",
+    "                'Holdback_SVOD',\n",
+    "                \n",
+    "                'Acq. Expires',\n",
+    "                'Link','Password', 'IMDB Link', 'US Box Office', 'LATAM Box Office', 'USA ',\n",
     "       'Mexico', 'Brazil', ' Argentina', 'Bolivia', 'Chile', 'Colombia ',\n",
     "       'Costa Rica', 'Ecuador', 'El Salvador', 'Guatemala', 'Honduras',\n",
     "       'Nicaragua', 'Panama', 'Paraguay', 'Peru', 'Dominican Republic',\n",
-    "       'Uruguay', 'Venezuela']"
+    "       'Uruguay', 'Venezuela']\n",
+    "\n",
+    "merged_df['Year'] = merged_df['Year Completed']\n",
+    "merged_df['Acq. Expires'] = merged_df['Acq. Expires_SVOD'].apply(lambda x: x.date())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 201,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-07T23:06:13.155008Z",
-     "start_time": "2021-01-07T23:06:11.353076Z"
+     "end_time": "2021-01-09T18:45:58.773749Z",
+     "start_time": "2021-01-09T18:45:58.678892Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "merged_df[sales] = merged_df[sales].apply(lambda x: x.apply(lambda x: x.date()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T18:45:59.383486Z",
+     "start_time": "2021-01-09T18:45:59.354536Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "merged_df[[col for col in merged_df.columns if 'Available' in col]] = merged_df[[col for col in merged_df.columns if 'Available' in col]].apply(lambda x: x.apply(lambda x: pd.Timestamp(x) if type(x) == int else x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T18:46:00.024033Z",
+     "start_time": "2021-01-09T18:45:59.994113Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "merged_df[[col for col in merged_df.columns if 'Available' in col]] = merged_df[[col for col in merged_df.columns if 'Available' in col]].apply(lambda x: x.apply(lambda x: str(x).replace(' 00:00:00', '')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T18:46:00.680056Z",
+     "start_time": "2021-01-09T18:46:00.647114Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "merged_df[[col for col in merged_df.columns if 'Holdback' in col]] = merged_df[[col for col in merged_df.columns if 'Holdback' in col]].apply(lambda x: x.apply(lambda x: str(x).replace(' 00:00:00', '')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-09T18:46:23.693634Z",
+     "start_time": "2021-01-09T18:46:22.955271Z"
     }
    },
    "outputs": [],
