--- a/avails/notebooks/availsCleanup.ipynb
+++ b/avails/notebooks/availsCleanup.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:48.867293Z",
-     "start_time": "2021-01-09T18:45:48.846383Z"
+     "end_time": "2021-01-11T20:43:42.210096Z",
+     "start_time": "2021-01-11T20:43:42.184166Z"
     }
    },
    "outputs": [],
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 90,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:54.129813Z",
-     "start_time": "2021-01-09T18:45:49.574992Z"
+     "end_time": "2021-01-11T20:46:26.016279Z",
+     "start_time": "2021-01-11T20:46:20.920905Z"
     }
    },
    "outputs": [
@@ -123,13 +123,13 @@
     }
    ],
    "source": [
-    "svod_avails = pd.read_excel('C:/Users/aleja/Downloads/files/Availability by Region with Reissues - SVOD.xlsx', skiprows=1)\n",
+    "svod_avails = pd.read_excel('C:/Users/aleja/Downloads/Availability by Region with Reissues - SVOD (26).xlsx', skiprows=1)\n",
     "svod_avails, svod_sales = cleanup(svod_avails, 'SVOD')\n",
     "\n",
-    "ptv_avails = pd.read_excel('C:/Users/aleja/Downloads/files/Availability by Region with Reissues - Basic Pay TV.xlsx', skiprows=1)\n",
+    "ptv_avails = pd.read_excel('C:/Users/aleja/Downloads/Availability by Region with Reissues - Basic Pay TV (26).xlsx', skiprows=1)\n",
     "ptv_avails, ptv_sales = cleanup(ptv_avails, 'PanRegionalPayTV')\n",
     "\n",
-    "ptv_local_avails = pd.read_excel('C:/Users/aleja/Downloads/files/Availability by Region with Reissues - Basic Pay TV (Local).xlsx', skiprows=1)\n",
+    "ptv_local_avails = pd.read_excel('C:/Users/aleja/Downloads/Availability by Region with Reissues - Basic Pay TV (Local) (26).xlsx', skiprows=1)\n",
     "ptv_local_avails, ptv_local_sales = cleanup(ptv_local_avails, 'LocalPayTV')\n",
     "\n",
     "ptv_avails = ptv_avails.merge(ptv_local_avails, on=list(ptv_avails.columns[:13]), how='left')\n",
@@ -139,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:54.285639Z",
-     "start_time": "2021-01-09T18:45:54.271975Z"
+     "end_time": "2021-01-11T20:46:26.840788Z",
+     "start_time": "2021-01-11T20:46:26.821873Z"
     }
    },
    "outputs": [],
@@ -176,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:54.425078Z",
-     "start_time": "2021-01-09T18:45:54.411305Z"
+     "end_time": "2021-01-11T20:46:27.043246Z",
+     "start_time": "2021-01-11T20:46:27.025293Z"
     }
    },
    "outputs": [],
@@ -195,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:54.613609Z",
-     "start_time": "2021-01-09T18:45:54.551628Z"
+     "end_time": "2021-01-11T20:46:27.420069Z",
+     "start_time": "2021-01-11T20:46:27.354563Z"
     }
    },
    "outputs": [],
@@ -209,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:54.754686Z",
-     "start_time": "2021-01-09T18:45:54.740274Z"
+     "end_time": "2021-01-11T20:46:27.577029Z",
+     "start_time": "2021-01-11T20:46:27.565685Z"
     }
    },
    "outputs": [],
@@ -239,11 +239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:54.911044Z",
-     "start_time": "2021-01-09T18:45:54.881156Z"
+     "end_time": "2021-01-11T20:46:27.917962Z",
+     "start_time": "2021-01-11T20:46:27.891994Z"
     }
    },
    "outputs": [],
@@ -253,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 96,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:55.537253Z",
-     "start_time": "2021-01-09T18:45:55.038704Z"
+     "end_time": "2021-01-11T20:46:28.733819Z",
+     "start_time": "2021-01-11T20:46:28.284188Z"
     }
    },
    "outputs": [],
@@ -270,11 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:55.679323Z",
-     "start_time": "2021-01-09T18:45:55.664789Z"
+     "end_time": "2021-01-11T20:46:28.875980Z",
+     "start_time": "2021-01-11T20:46:28.862442Z"
     }
    },
    "outputs": [],
@@ -284,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 98,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:56.536367Z",
-     "start_time": "2021-01-09T18:45:55.805020Z"
+     "end_time": "2021-01-11T20:46:29.687058Z",
+     "start_time": "2021-01-11T20:46:29.017644Z"
     }
    },
    "outputs": [],
@@ -301,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:56.677197Z",
-     "start_time": "2021-01-09T18:45:56.664198Z"
+     "end_time": "2021-01-11T20:46:29.826278Z",
+     "start_time": "2021-01-11T20:46:29.813148Z"
     }
    },
    "outputs": [],
@@ -315,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:56.818354Z",
-     "start_time": "2021-01-09T18:45:56.806816Z"
+     "end_time": "2021-01-11T20:46:30.029706Z",
+     "start_time": "2021-01-11T20:46:29.969128Z"
     }
    },
    "outputs": [],
@@ -330,11 +330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:56.959366Z",
-     "start_time": "2021-01-09T18:45:56.944908Z"
+     "end_time": "2021-01-11T20:46:30.170025Z",
+     "start_time": "2021-01-11T20:46:30.158322Z"
     }
    },
    "outputs": [],
@@ -344,11 +344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:57.101878Z",
-     "start_time": "2021-01-09T18:45:57.089023Z"
+     "end_time": "2021-01-11T20:46:30.312614Z",
+     "start_time": "2021-01-11T20:46:30.298652Z"
     }
    },
    "outputs": [],
@@ -358,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 103,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:57.259240Z",
-     "start_time": "2021-01-09T18:45:57.230504Z"
+     "end_time": "2021-01-11T20:46:30.983119Z",
+     "start_time": "2021-01-11T20:46:30.950181Z"
     }
    },
    "outputs": [],
@@ -374,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:57.775558Z",
-     "start_time": "2021-01-09T18:45:57.761596Z"
+     "end_time": "2021-01-11T20:46:31.342197Z",
+     "start_time": "2021-01-11T20:46:31.309288Z"
     }
    },
    "outputs": [],
@@ -415,25 +415,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 105,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:58.773749Z",
-     "start_time": "2021-01-09T18:45:58.678892Z"
+     "end_time": "2021-01-11T20:46:31.999814Z",
+     "start_time": "2021-01-11T20:46:31.843235Z"
     }
    },
    "outputs": [],
    "source": [
-    "merged_df[sales] = merged_df[sales].apply(lambda x: x.apply(lambda x: x.date()))"
+    "merged_df[sales] = merged_df[sales].apply(lambda x: x.apply(lambda x: str(x)[:10] if str(x) != 'nan' else ''))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:45:59.383486Z",
-     "start_time": "2021-01-09T18:45:59.354536Z"
+     "end_time": "2021-01-11T20:46:32.172078Z",
+     "start_time": "2021-01-11T20:46:32.144428Z"
     }
    },
    "outputs": [],
@@ -443,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 107,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:46:00.024033Z",
-     "start_time": "2021-01-09T18:45:59.994113Z"
+     "end_time": "2021-01-11T20:46:32.423120Z",
+     "start_time": "2021-01-11T20:46:32.409130Z"
     }
    },
    "outputs": [],
@@ -457,11 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 108,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:46:00.680056Z",
-     "start_time": "2021-01-09T18:46:00.647114Z"
+     "end_time": "2021-01-11T20:46:32.671571Z",
+     "start_time": "2021-01-11T20:46:32.648634Z"
     }
    },
    "outputs": [],
@@ -471,11 +471,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T18:46:23.693634Z",
-     "start_time": "2021-01-09T18:46:22.955271Z"
+     "end_time": "2021-01-11T20:46:32.951204Z",
+     "start_time": "2021-01-11T20:46:32.873979Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "merged_df = merged_df.apply(lambda x: x.apply(lambda x: '' if str(x) == 'NaT' else x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-11T20:46:34.028115Z",
+     "start_time": "2021-01-11T20:46:33.394890Z"
     }
    },
    "outputs": [],
