--- a/justnow/notebooks/justNow.ipynb
+++ b/justnow/notebooks/justNow.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 189,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:54:33.614496Z",
-     "start_time": "2021-01-09T22:54:33.604521Z"
+     "end_time": "2021-01-10T03:48:16.860191Z",
+     "start_time": "2021-01-10T03:48:16.849257Z"
     }
    },
    "outputs": [],
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 190,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:55:59.876688Z",
-     "start_time": "2021-01-09T22:54:49.848156Z"
+     "end_time": "2021-01-10T03:49:06.416643Z",
+     "start_time": "2021-01-10T03:48:19.372362Z"
     }
    },
    "outputs": [
@@ -33,12 +33,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a search termMia and the White Lion\n"
+      "Enter a search termTenet\n"
      ]
     }
    ],
    "source": [
     "searchTerm = input('Enter a search term')\n",
+    "searchTerm = searchTerm.replace(' ', '+')\n",
     "\n",
     "locs = ['en_US',\n",
     "        'en_CA',\n",
@@ -99,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 191,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:56:04.222020Z",
-     "start_time": "2021-01-09T22:56:03.558492Z"
+     "end_time": "2021-01-10T03:49:09.041822Z",
+     "start_time": "2021-01-10T03:49:08.722411Z"
     }
    },
    "outputs": [],
@@ -121,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 192,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:56:04.708404Z",
-     "start_time": "2021-01-09T22:56:04.694577Z"
+     "end_time": "2021-01-10T03:49:09.433152Z",
+     "start_time": "2021-01-10T03:49:09.419153Z"
     }
    },
    "outputs": [],
@@ -136,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 193,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:14.639236Z",
-     "start_time": "2021-01-09T22:57:14.356592Z"
+     "end_time": "2021-01-10T03:49:09.962155Z",
+     "start_time": "2021-01-10T03:49:09.851452Z"
     }
    },
    "outputs": [],
@@ -158,11 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 194,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:15.813738Z",
-     "start_time": "2021-01-09T22:57:15.802765Z"
+     "end_time": "2021-01-10T03:49:11.009078Z",
+     "start_time": "2021-01-10T03:49:10.990096Z"
     }
    },
    "outputs": [],
@@ -172,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 195,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:16.468396Z",
-     "start_time": "2021-01-09T22:57:16.450415Z"
+     "end_time": "2021-01-10T03:49:11.695701Z",
+     "start_time": "2021-01-10T03:49:11.677721Z"
     }
    },
    "outputs": [],
@@ -186,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 196,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:16.951718Z",
-     "start_time": "2021-01-09T22:57:16.940719Z"
+     "end_time": "2021-01-10T03:49:12.100928Z",
+     "start_time": "2021-01-10T03:49:12.086964Z"
     }
    },
    "outputs": [],
@@ -200,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 197,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:17.563933Z",
-     "start_time": "2021-01-09T22:57:17.550937Z"
+     "end_time": "2021-01-10T03:49:12.491989Z",
+     "start_time": "2021-01-10T03:49:12.479020Z"
     }
    },
    "outputs": [],
@@ -214,11 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 198,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:18.359196Z",
-     "start_time": "2021-01-09T22:57:18.325338Z"
+     "end_time": "2021-01-10T03:49:13.194272Z",
+     "start_time": "2021-01-10T03:49:13.166347Z"
     }
    },
    "outputs": [],
@@ -274,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:19.186612Z",
-     "start_time": "2021-01-09T22:57:19.181625Z"
+     "end_time": "2021-01-10T03:49:13.851278Z",
+     "start_time": "2021-01-10T03:49:13.836318Z"
     }
    },
    "outputs": [],
@@ -288,17 +289,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 200,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-09T22:57:20.000079Z",
-     "start_time": "2021-01-09T22:57:19.988113Z"
+     "end_time": "2021-01-10T03:49:14.677545Z",
+     "start_time": "2021-01-10T03:49:14.406048Z"
     }
    },
    "outputs": [],
    "source": [
-    "export = clean_data.sort_values('jw_id')[['Title', 'Territory', 'SVOD']]"
+    "export = clean_data.sort_values('jw_id')[['Title', 'Territory', 'SVOD']]\n",
+    "export.to_excel('./Just Watch - '+searchTerm+'.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
