Added PanRegionalPTV avails

--- a/avails/notebooks/availsCleanup.ipynb
+++ b/avails/notebooks/availsCleanup.ipynb
@@ -51,7 +51,7 @@
     "    new_df[column] = new_values\n",
     "    return new_df\n",
     "\n",
-    "def cleanup(df, suffix):\n",
+    "def cleanup(df, suffix=''):\n",
     "    df['Non-Exclusive Date'] = df['Non-Exclusive Date'].replace('NOT AVAIL', np.nan).astype('datetime64')\n",
     "    df['Non-Exclusive Date'] = df.apply(lambda x: dt.date.today() if x['Available?'] == 'Avail NE' else x['Non-Exclusive Date'], axis=1)\n",
     "    max_prev_sale_enddate = df['Previous Sale Activity'].str.extractall(r'(\\d{2}[-]\\w{3}[-]\\d{4})').astype('datetime64').reset_index().groupby('level_0')[0].max()\n",
@@ -67,7 +67,7 @@
     "    df['Available?'].loc[mask] = df['Non-Exclusive Date'].loc[mask]\n",
     "    df['First Run or Library'] = df['Is Reissue?'].fillna('First Run')\n",
     "    df['First Run or Library'] = df['First Run or Library'].map({'Yes': 'Library', 'First Run': 'First Run'})\n",
-    "    \n",
+    "\n",
     "    sale_activity = tidy_split(df, 'Previous Sale Activity', sep='\\n', keep=False)\n",
     "    sale_activity['Previous Sale Activity'] = sale_activity['Previous Sale Activity'].str.replace('.', '')\n",
     "    sale_activity_enddates = sale_activity['Previous Sale Activity'].str[-11:]\n",
@@ -78,21 +78,21 @@
     "    sale_activity['end_dates'].fillna(sale_activity['Acq. Expires'], inplace=True)\n",
     "    sale_activity['client'] = sale_activity['Previous Sale Activity'].str[:-25]\n",
     "    sale_activity = sale_activity.pivot_table(index='Unique Id', values='end_dates', columns='client', aggfunc=max)\n",
-    "    \n",
+    "\n",
+    "\n",
     "    df = df.join(sale_activity, on='Unique Id', how='left').sort_values(by='Unique Id')\n",
-    "    \n",
-    "    df.columns = list(df.columns[:13]) + [str(col) + '_' + suffix for col in df.columns[13:]]\n",
-    "    \n",
-    "    return df, [str(col) + '_' + suffix for col in sale_activity.columns]"
+    "\n",
+    "    df.columns = list(df.columns[:13]) + [str(col) + suffix for col in df.columns[13:]]\n",
+    "    return df, [str(col) + suffix for col in sale_activity.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:32:33.432657Z",
-     "start_time": "2021-01-12T01:32:33.397751Z"
+     "end_time": "2021-01-12T01:57:43.442465Z",
+     "start_time": "2021-01-12T01:57:43.399581Z"
     }
    },
    "outputs": [],
@@ -104,26 +104,13 @@
     "    \n",
     "    metadata_df = df[metadata].drop_duplicates().copy()\n",
     "    \n",
-    "    agg_dict = {'Region': lambda x: ' & '.join(x),\n",
-    "                        'First Run or Library_PanRegionalPayTV':'first',\n",
-    "                        'Available?_PanRegionalPayTV': 'first',\n",
-    "                         'Holdback_PanRegionalPayTV': 'first',\n",
-    "                         'Note_PanRegionalPayTV': 'first',\n",
-    "                         'Acq. Expires_PanRegionalPayTV': 'first',\n",
-    "                         'Previous Sale Activity_PanRegionalPayTV': 'first',\n",
-    "                        'First Run or Library_LocalPayTV':'first',\n",
-    "                         'Available?_LocalPayTV': 'first',\n",
-    "                         'Holdback_LocalPayTV': 'first',\n",
-    "                         'Note_LocalPayTV': 'first',\n",
-    "                         'Acq. Expires_LocalPayTV': 'first',\n",
-    "                         'Previous Sale Activity_LocalPayTV': 'first',\n",
-    "                        'First Run or Library_SVOD':'first',\n",
-    "                         'Available?_SVOD': 'first',\n",
-    "                         'Holdback_SVOD': 'first',\n",
-    "                         'Note_SVOD': 'first',\n",
-    "                         'Acq. Expires_SVOD': 'first',\n",
-    "                         'Previous Sale Activity_SVOD': 'first'}\n",
+    "    agg_dict = {'Region': lambda x: ' & '.join(x)}\n",
     "\n",
+    "    for col in df.columns:\n",
+    "        for colname in ['First Run or Library', 'Available', 'Holdback', 'Note', 'Acq. Expires', 'Previous Sale Activity']:\n",
+    "            if colname in col:\n",
+    "                agg_dict[col] = 'first'\n",
+    "    \n",
     "    for sale in sales:\n",
     "        agg_dict[sale] = 'first'\n",
     "    \n",
@@ -189,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:28:45.974011Z",
-     "start_time": "2021-01-12T01:28:43.411959Z"
+     "end_time": "2021-01-12T01:57:52.115749Z",
+     "start_time": "2021-01-12T01:57:47.136061Z"
     }
    },
    "outputs": [
@@ -236,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:28:47.342834Z",
-     "start_time": "2021-01-12T01:28:46.840772Z"
+     "end_time": "2021-01-12T01:57:53.171966Z",
+     "start_time": "2021-01-12T01:57:52.692061Z"
     }
    },
    "outputs": [],
@@ -253,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:28:48.995717Z",
-     "start_time": "2021-01-12T01:28:48.198710Z"
+     "end_time": "2021-01-12T01:57:54.193116Z",
+     "start_time": "2021-01-12T01:57:53.492114Z"
     }
    },
    "outputs": [],
@@ -270,40 +257,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:30:42.001002Z",
-     "start_time": "2021-01-12T01:30:41.991068Z"
+     "end_time": "2021-01-12T01:59:24.043292Z",
+     "start_time": "2021-01-12T01:59:24.027336Z"
     }
    },
    "outputs": [],
    "source": [
-    "sales = svod_sales+ptv_sales+ptv_local_sales\n",
+    "#sales = svod_sales+ptv_sales+ptv_local_sales\n",
+    "sales = ptv_sales\n",
     "sales = [sale for sale in sales if not sale.startswith('_')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:33:30.033981Z",
-     "start_time": "2021-01-12T01:33:29.741742Z"
+     "end_time": "2021-01-12T01:59:32.316404Z",
+     "start_time": "2021-01-12T01:59:32.127913Z"
     }
    },
    "outputs": [],
    "source": [
-    "df = process(merged_df, sales, screeners, ratings)"
+    "#df = process(merged_df, sales, screeners, ratings)\n",
+    "df = process(ptv_avails, sales, screeners, ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:31:16.927774Z",
-     "start_time": "2021-01-12T01:31:16.903843Z"
+     "end_time": "2021-01-12T01:58:14.682214Z",
+     "start_time": "2021-01-12T01:58:14.656284Z"
+    },
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
     }
    },
    "outputs": [],
@@ -337,16 +331,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-12T01:33:42.905860Z",
-     "start_time": "2021-01-12T01:33:42.060077Z"
+     "end_time": "2021-01-12T02:00:38.445456Z",
+     "start_time": "2021-01-12T02:00:38.423523Z"
     }
    },
    "outputs": [],
    "source": [
-    "df[cols_ordered + sales].to_excel('C:/Users/aleja/Documents/Alteryx/Ledafilms Data/Avails/Temp/PayTV-SVOD avails.xlsx',)"
+    "cols_ordered = ['Project Type', 'Unique Id', 'Title', 'Region', 'Year', 'Genre', 'Cast Member',\n",
+    "                            'Director',  'Synopsis', 'Website',\n",
+    "                            'Original Format', 'Dialogue Language', 'Subtitle Language',\n",
+    "\n",
+    "                            'First Run or Library_PanRegionalPayTV',\n",
+    "                            'Available?_PanRegionalPayTV', 'Non-Exclusive Date_PanRegionalPayTV',\n",
+    "                            'Exclusive Date_PanRegionalPayTV', 'Note_PanRegionalPayTV',\n",
+    "                            'Holdback_PanRegionalPayTV',\n",
+    "\n",
+    "                            'Acq. Expires',\n",
+    "                            'Link','Password', 'IMDB Link', 'US Box Office', 'LATAM Box Office', 'USA ',\n",
+    "                            'Mexico', 'Brazil', ' Argentina', 'Bolivia', 'Chile', 'Colombia ',\n",
+    "                            'Costa Rica', 'Ecuador', 'El Salvador', 'Guatemala', 'Honduras',\n",
+    "                            'Nicaragua', 'Panama', 'Paraguay', 'Peru', 'Dominican Republic',\n",
+    "                            'Uruguay', 'Venezuela']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-12T02:00:55.913451Z",
+     "start_time": "2021-01-12T02:00:55.495979Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df[cols_ordered + sales].to_excel('C:/Users/aleja/Documents/Alteryx/Ledafilms Data/Avails/Temp/PanRegionalPayTV avails.xlsx',)"
    ]
   },
   {
